--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="icon" href="_imgs/ic_clemente_blueart.png">
     <title>My Projects</title>
 </head>
+
 <body>
     <div class="menu">
         <ul>
@@ -62,7 +64,59 @@
             </p><br>
             <p>
                 <b>Technologies:</b> <br>
-                React+vite, css
+                React + vite, css
+            </p>
+        </div>
+
+        <div class="project">
+            <img src="_imgs/ipage.jpg">
+            <h4>IPage Webview App</h4>
+            <p>
+            <pre>
+                .
+                .
+                .
+            </pre>
+            (2025-Portuguese)
+            </p><br>
+            <p>
+                <b>Technologies:</b> <br>
+                Java-xml
+            </p>
+        </div>
+
+        <div class="project">
+            <img src="_imgs/wbv_sel.jpg">
+            <h4>SLE Webview App</h4>
+            <p>
+            <pre>
+                .
+                .
+                .
+            </pre>
+            (2025-Portuguese)
+            </p><br>
+            <p>
+                <b>Technologies:</b> <br>
+                Java-xml
+            </p>
+        </div>
+
+        <div class="project">
+            <img src="_imgs/pdvmobi.jpg">
+            <h4>PDVMobi site clone</h4>
+            <p>
+            <pre>
+                .
+                .
+                .
+                . 
+            </pre>
+            (2024-Portuguese)
+            </p><br>
+            <p>
+                <b>Technologies:</b> <br>
+                Html, css, javascript, php, mysql
             </p>
         </div>
 
@@ -77,6 +131,8 @@
                 Java-xml, mysql
             </p>
         </div>
+
+
         <div class="project"><img src="_imgs/app_02.jpg">
             <h4>Kwanzito</h4>
             <p>Kwanzito is an android app that i created thinking
@@ -199,6 +255,41 @@
                 Html, css, javascript and php
             </p>
         </div>
+
+        <div class="project">
+            <img src="_imgs/canteen.jpg">
+            <h4>Mobile Store Management System</h4>
+            <p>UI only
+            <pre>
+                    .
+                    .
+                    . 
+                </pre>
+            (2023-Portuguese)
+            </p><br>
+            <p>
+                <b>Technologies:</b> <br>
+                Java-xml
+            </p>
+        </div>
+
+        <div class="project">
+            <img src="_imgs/clinic.jpg">
+            <h4>Clinica Bryane</h4>
+            <p>Clinic Booking App
+            <pre>
+                    .
+                    .
+                    . 
+                </pre>
+            (2023-Portuguese)
+            </p><br>
+            <p>
+                <b>Technologies:</b> <br>
+                Java-xml, mysql
+            </p>
+        </div>
+
     </div>
     <div class="footer">
         <div class="footer-column">
@@ -225,4 +316,5 @@
         </div>
     </div>
 </body>
+
 </html>
