solving more errors

--- a/about-me.html
+++ b/about-me.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="_css/index-style.css">
-    <link rel="icon" href="_imgs/ic_clemente_blueart.png">
-    <link rel="stylesheet" href="_css/aboutme.css">
+    <link rel="stylesheet" href="./_css/index-style.css">
+    <link rel="icon" href="./_imgs/ic_clemente_blueart.png">
+    <link rel="stylesheet" href="./_css/aboutme.css">
     <title>About me</title>
 </head>
 
@@ -23,7 +23,7 @@
     <h1 style="margin: 20px;">About me</h1>
     <div class="perfil">
         <div class="perfil-column">
-            <img src="_imgs/img_content_to_learn.png" class="perfil-pic">
+            <img src="./_imgs/img_content_to_learn.png" class="perfil-pic">
         </div>
         <div class="perfil-column">
             <h2>Clemente T. Joaquim</h2>
