--- a/clients.html
+++ b/clients.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="_css/index-style.css">
-    <link rel="stylesheet" href="_css/awrning.css">
-    <link rel="icon" href="_imgs/ic_clemente_blueart.png">
+    <link rel="stylesheet" href="./_css/index-style.css">
+    <link rel="stylesheet" href="./_css/awrning.css">
+    <link rel="icon" href="./_imgs/ic_clemente_blueart.png">
     <title>Clients</title>
 </head>
 
@@ -32,9 +32,9 @@
         <div class="footer-column">
             <h3>Fallow more</h3>
             <p>
-                <img src="_imgs/ic_facebook.png">
-                <img src="_imgs/ic_instagram.png">
-                <img src="_imgs/ic_twitter.png">
+                <img src="./_imgs/ic_facebook.png">
+                <img src="_./imgs/ic_instagram.png">
+                <img src="./_imgs/ic_twitter.png">
             </p>
 
         </div>
