--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="_css/index-style.css">
-    <link rel="icon" href="_imgs/ic_clemente_blueart.png">
+    <link rel="stylesheet" href="./_css/index-style.css">
+    <link rel="icon" href="./_imgs/ic_clemente_blueart.png">
     <title>Portfolio-Clemente</title>
 </head>
 
@@ -35,7 +35,7 @@
     </div>
     <div class="first-line">
         <div class="line-item">
-            <img src="_imgs/welcome-feature-icon-8.png" width="132" height="132">
+            <img src="./_imgs/welcome-feature-icon-8.png" width="132" height="132">
             <h2>Web App development</h2>
             <p>
                 I specialize in range of web development
@@ -45,7 +45,7 @@
             </p>
         </div>
         <div class="line-item">
-            <img src="_imgs/welcome-feature-icon-3.png" width="132" height="132">
+            <img src="./_imgs/welcome-feature-icon-3.png" width="132" height="132">
             <h2>Android App development</h2>
             <p>
                 I focus on leveranging the latest technologies and best practices
@@ -56,7 +56,7 @@
         </div>
 
         <div class="line-item">
-            <img src="_imgs/welcome-feature-icon-1.png" width="132" height="132">
+            <img src="./_imgs/welcome-feature-icon-1.png" width="132" height="132">
             <h2>Desktop App development</h2>
             <p>
                 With a solid foundation in various prgramming languages Android
@@ -69,23 +69,23 @@
         </div>
     </div>
     <div class="achivement-list">
-        <div class="list-item"><img src="_imgs/facebook.png"
+        <div class="list-item"><img src="./_imgs/facebook.png"
                 onclick="window.location.href='https://www.facebook.com/clementeafonsobelchior.dino';">
         </div>
-        <div class="list-item"><img src="_imgs/whatsapp.png"
+        <div class="list-item"><img src="./_imgs/whatsapp.png"
                 onclick="window.location.href='https://wa.me/message/UPPTRQ5XIOJYO1';">
         </div>
-        <div class="list-item"><img src="_imgs/linkedin.png"
+        <div class="list-item"><img src="./_imgs/linkedin.png"
                 onclick="window.location.href='https://www.linkedin.com/in/clemente-joaquim';">
         </div>
-        <div class="list-item"><img src="_imgs/ic-github.png" 
+        <div class="list-item"><img src="./_imgs/ic-github.png" 
             onclick="window.location.href='https://github.com/ClementeT3rr1us/';">
         </div>
     </div>
 
     <div class="header" style="margin-top: 50px;">
         <div class="pane-left">
-            <img src="_imgs/img-t0-left-side.png">
+            <img src="./_imgs/img-t0-left-side.png">
         </div>
         <div class="pane-right">
             <h3>Read more about me</h3>
@@ -141,7 +141,7 @@
         </div>
 
         <div class="project">
-            <img src="_imgs/port.jpg">
+            <img src="./_imgs/port.jpg">
             <h4>This Portfolio</h4>
             <p>
             <pre>
@@ -158,7 +158,7 @@
             </p>
         </div>
 
-        <div class="project"><img src="_imgs/landing-page.jpg">
+        <div class="project"><img src="./_imgs/landing-page.jpg">
             <h4>Landing Page</h4>
             <p>
                 . <br>
