--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="_css/index-style.css">
-    <link rel="icon" href="_imgs/ic_clemente_blueart.png">
+    <link rel="stylesheet" href="./_css/index-style.css">
+    <link rel="icon" href="./_imgs/ic_clemente_blueart.png">
     <title>My Projects</title>
 </head>
 
