--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./_css/index-style.css">
-    <link rel="icon" href="./_imgs/ic_clemente_blueart.png">
+    <link rel="stylesheet" href="/_css/index-style.css">
+    <link rel="icon" href="/_imgs/ic_clemente_blueart.png">
     <title>Portfolio-Clemente</title>
 </head>
 
@@ -26,7 +26,7 @@
             </button>
         </div>
         <div class="pane-right">
-            <img src="_imgs/my_pic.png" width="400" height="400">
+            <img src="/_imgs/my_pic.png" width="400" height="400">
         </div>
     </div>
     <div class="txt_area">
@@ -35,7 +35,7 @@
     </div>
     <div class="first-line">
         <div class="line-item">
-            <img src="./_imgs/welcome-feature-icon-8.png" width="132" height="132">
+            <img src="/_imgs/welcome-feature-icon-8.png" width="132" height="132">
             <h2>Web App development</h2>
             <p>
                 I specialize in range of web development
@@ -85,7 +85,7 @@
 
     <div class="header" style="margin-top: 50px;">
         <div class="pane-left">
-            <img src="./_imgs/img-t0-left-side.png">
+            <img src="/_imgs/img-t0-left-side.png">
         </div>
         <div class="pane-right">
             <h3>Read more about me</h3>
@@ -141,7 +141,7 @@
         </div>
 
         <div class="project">
-            <img src="./_imgs/port.jpg">
+            <img src="/_imgs/port.jpg">
             <h4>This Portfolio</h4>
             <p>
             <pre>
@@ -158,7 +158,7 @@
             </p>
         </div>
 
-        <div class="project"><img src="./_imgs/landing-page.jpg">
+        <div class="project"><img src="/_imgs/landing-page.jpg">
             <h4>Landing Page</h4>
             <p>
                 . <br>
@@ -174,7 +174,7 @@
         </div>
 
         <div class="project">
-            <img src="_imgs/ipage.jpg">
+            <img src="/_imgs/ipage.jpg">
             <h4>IPage Webview App</h4>
             <p>
             <pre>
@@ -192,7 +192,7 @@
 
         <div class="project">
             <img src="_imgs/wbv_sel.jpg">
-            <h4>SLE Webview App</h4>
+            <h4>Soberano E Webview App</h4>
             <p>
             <pre>
                 .
@@ -379,7 +379,7 @@
         </div>
 
         <div class="project">
-            <img src="_imgs/clinic.jpg">
+            <img src="/_imgs/clinic.jpg">
             <h4>Clinica Bryane</h4>
             <p>Clinic Booking App
             <pre>
@@ -400,9 +400,9 @@
         <div class="footer-column">
             <h3>Fallow more</h3>
             <p>
-                <img src="_imgs/ic_facebook.png">
-                <img src="_imgs/ic_instagram.png">
-                <img src="_imgs/ic_twitter.png">
+                <img src="/_imgs/ic_facebook.png">
+                <img src="/_imgs/ic_instagram.png">
+                <img src="/_imgs/ic_twitter.png">
             </p>
 
         </div>
