--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/_css/index-style.css">
-    <link rel="icon" href="/_imgs/ic_clemente_blueart.png">
+    <link rel="stylesheet" href="/css/index-style.css">
+    <link rel="icon" href="/imgs/ic_clemente_blueart.png">
     <title>Portfolio-Clemente</title>
 </head>
 
@@ -26,7 +26,7 @@
             </button>
         </div>
         <div class="pane-right">
-            <img src="/_imgs/my_pic.png" width="400" height="400">
+            <img src="/imgs/my_pic.png" width="400" height="400">
         </div>
     </div>
     <div class="txt_area">
@@ -35,7 +35,7 @@
     </div>
     <div class="first-line">
         <div class="line-item">
-            <img src="/_imgs/welcome-feature-icon-8.png" width="132" height="132">
+            <img src="/imgs/welcome-feature-icon-8.png" width="132" height="132">
             <h2>Web App development</h2>
             <p>
                 I specialize in range of web development
@@ -45,7 +45,7 @@
             </p>
         </div>
         <div class="line-item">
-            <img src="./_imgs/welcome-feature-icon-3.png" width="132" height="132">
+            <img src="./imgs/welcome-feature-icon-3.png" width="132" height="132">
             <h2>Android App development</h2>
             <p>
                 I focus on leveranging the latest technologies and best practices
@@ -56,7 +56,7 @@
         </div>
 
         <div class="line-item">
-            <img src="./_imgs/welcome-feature-icon-1.png" width="132" height="132">
+            <img src="./imgs/welcome-feature-icon-1.png" width="132" height="132">
             <h2>Desktop App development</h2>
             <p>
                 With a solid foundation in various prgramming languages Android
