testing recent adjustments

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </p>
         </div>
         <div class="line-item">
-            <img src="./imgs/welcome-feature-icon-3.png" width="132" height="132">
+            <img src="/imgs/welcome-feature-icon-3.png" width="132" height="132">
             <h2>Android App development</h2>
             <p>
                 I focus on leveranging the latest technologies and best practices
@@ -56,7 +56,7 @@
         </div>
 
         <div class="line-item">
-            <img src="./imgs/welcome-feature-icon-1.png" width="132" height="132">
+            <img src="/imgs/welcome-feature-icon-1.png" width="132" height="132">
             <h2>Desktop App development</h2>
             <p>
                 With a solid foundation in various prgramming languages Android
@@ -69,23 +69,23 @@
         </div>
     </div>
     <div class="achivement-list">
-        <div class="list-item"><img src="./_imgs/facebook.png"
+        <div class="list-item"><img src="/imgs/facebook.png"
                 onclick="window.location.href='https://www.facebook.com/clementeafonsobelchior.dino';">
         </div>
-        <div class="list-item"><img src="./_imgs/whatsapp.png"
+        <div class="list-item"><img src="/imgs/whatsapp.png"
                 onclick="window.location.href='https://wa.me/message/UPPTRQ5XIOJYO1';">
         </div>
-        <div class="list-item"><img src="./_imgs/linkedin.png"
+        <div class="list-item"><img src="/imgs/linkedin.png"
                 onclick="window.location.href='https://www.linkedin.com/in/clemente-joaquim';">
         </div>
-        <div class="list-item"><img src="./_imgs/ic-github.png" 
+        <div class="list-item"><img src="/imgs/ic-github.png" 
             onclick="window.location.href='https://github.com/ClementeT3rr1us/';">
         </div>
     </div>
 
     <div class="header" style="margin-top: 50px;">
         <div class="pane-left">
-            <img src="/_imgs/img-t0-left-side.png">
+            <img src="/imgs/img-t0-left-side.png">
         </div>
         <div class="pane-right">
             <h3>Read more about me</h3>
@@ -141,7 +141,7 @@
         </div>
 
         <div class="project">
-            <img src="/_imgs/port.jpg">
+            <img src="/imgs/port.jpg">
             <h4>This Portfolio</h4>
             <p>
             <pre>
@@ -158,7 +158,7 @@
             </p>
         </div>
 
-        <div class="project"><img src="/_imgs/landing-page.jpg">
+        <div class="project"><img src="/imgs/landing-page.jpg">
             <h4>Landing Page</h4>
             <p>
                 . <br>
@@ -174,7 +174,7 @@
         </div>
 
         <div class="project">
-            <img src="/_imgs/ipage.jpg">
+            <img src="/imgs/ipage.jpg">
             <h4>IPage Webview App</h4>
             <p>
             <pre>
@@ -191,7 +191,7 @@
         </div>
 
         <div class="project">
-            <img src="_imgs/wbv_sel.jpg">
+            <img src="/imgs/wbv_sel.jpg">
             <h4>Soberano E Webview App</h4>
             <p>
             <pre>
@@ -208,7 +208,7 @@
         </div>
 
         <div class="project">
-            <img src="_imgs/pdvmobi.jpg">
+            <img src="/imgs/pdvmobi.jpg">
             <h4>PDVMobi site clone</h4>
             <p>
             <pre>
@@ -225,7 +225,7 @@
             </p>
         </div>
 
-        <div class="project"><img src="_imgs/app_01.jpg">
+        <div class="project"><img src="/imgs/app_01.jpg">
             <h4>Mafa Management System a1</h4>
             <p>This android application is part of mafa management system
                 it's used as menu and inventory and it can be blocked by
@@ -238,7 +238,7 @@
         </div>
 
 
-        <div class="project"><img src="_imgs/app_02.jpg">
+        <div class="project"><img src="/imgs/app_02.jpg">
             <h4>Kwanzito</h4>
             <p>Kwanzito is an android app that i created thinking
                 in the young people with dream of being a entrepreneur but don't
@@ -252,7 +252,7 @@
             </p>
         </div>
         <div class="project">
-            <img src="_imgs/mafa-website.PNG">
+            <img src="/imgs/mafa-website.PNG">
             <h4>Mafa Website</h4>
             <p>Mafa Website, a place where you can be updated of everything
                 about Mafa restaurant: food, prices, activities and schedule
@@ -264,7 +264,7 @@
             </p>
         </div>
         <div class="project">
-            <video src="_res/blue.mp4" controls></video>
+            <video src="/_res/blue.mp4" controls></video>
             <h4>Blue Art HR</h4>
             <p>Blue Art HR is an desktop applications created to know
                 how many Clients, devices and money the technical assistancy got
@@ -276,7 +276,7 @@
             </p>
         </div>
         <div class="project">
-            <video src="_res/sapula.mp4" controls></video>
+            <video src="/_res/sapula.mp4" controls></video>
             <h4>Sapula private school</h4>
             <p>It's a website a informative website about Sapula privated school
                 it's where did high school i had my first contact with programming.
@@ -290,7 +290,7 @@
             </p>
         </div>
         <div class="project">
-            <video src="_res/doom-v1.mp4" controls></video>
+            <video src="/_res/doom-v1.mp4" controls></video>
             <h4>Doom Brasil inventory</h4>
             <p>... <br>
                 ... <br>
@@ -305,7 +305,7 @@
             </p>
         </div>
         <div class="project">
-            <video src="_res/doom-v2.mp4" controls></video>
+            <video src="/_res/doom-v2.mp4" controls></video>
             <h4>Doom Brasil inventory V2</h4>
             <p>I was not satisfied the UI of the first version of this Projects
                 that i built, so i decided to create a new UI for it <br>
@@ -318,7 +318,7 @@
         </div>
 
         <div class="project">
-            <video src="_res/spider-prompt.mp4" controls></video>
+            <video src="/_res/spider-prompt.mp4" controls></video>
             <h4>Spider Prompt</h4>
             <p>I created my own android command prompt for funny. It's already working
                 but not finished yet. My goal is adding 30 commands on it <br>
@@ -331,7 +331,7 @@
         </div>
 
         <div class="project">
-            <video src="_res/msg-app.mp4" controls></video>
+            <video src="/_res/msg-app.mp4" controls></video>
             <h4>Impaktu msg app(2024)</h4>
             <p>An app personalized sms sending for a company using
                 a sms API.
@@ -345,7 +345,7 @@
         </div>
 
         <div class="project">
-            <img src="_imgs/t-farm.PNG">
+            <img src="/imgs/t-farm.PNG">
             <h4>T-Farm</h4>
             <p>A pharmacy management system
             <pre>
@@ -362,7 +362,7 @@
         </div>
 
         <div class="project">
-            <img src="_imgs/canteen.jpg">
+            <img src="/imgs/canteen.jpg">
             <h4>Mobile Store Management System</h4>
             <p>UI only
             <pre>
@@ -379,7 +379,7 @@
         </div>
 
         <div class="project">
-            <img src="/_imgs/clinic.jpg">
+            <img src="/imgs/clinic.jpg">
             <h4>Clinica Bryane</h4>
             <p>Clinic Booking App
             <pre>
@@ -400,9 +400,9 @@
         <div class="footer-column">
             <h3>Fallow more</h3>
             <p>
-                <img src="/_imgs/ic_facebook.png">
-                <img src="/_imgs/ic_instagram.png">
-                <img src="/_imgs/ic_twitter.png">
+                <img src="/imgs/ic_facebook.png">
+                <img src="/imgs/ic_instagram.png">
+                <img src="/imgs/ic_twitter.png">
             </p>
 
         </div>
