--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </div>
     <div class="projec_field">
         <div class="project">
-            <video src="_res/mafa-desktop.mp4" controls></video>
+            <video src="/res/mafa-desktop.mp4" controls></video>
             <h4>Mafa Management System</h4>
             <p>I created a restaurant system for "wndows, linux and MacOS"
                 that can help you to manage your restaurant and the Android
@@ -264,7 +264,7 @@
             </p>
         </div>
         <div class="project">
-            <video src="/_res/blue.mp4" controls></video>
+            <video src="/res/blue.mp4" controls></video>
             <h4>Blue Art HR</h4>
             <p>Blue Art HR is an desktop applications created to know
                 how many Clients, devices and money the technical assistancy got
@@ -276,7 +276,7 @@
             </p>
         </div>
         <div class="project">
-            <video src="/_res/sapula.mp4" controls></video>
+            <video src="/res/sapula.mp4" controls></video>
             <h4>Sapula private school</h4>
             <p>It's a website a informative website about Sapula privated school
                 it's where did high school i had my first contact with programming.
@@ -290,7 +290,7 @@
             </p>
         </div>
         <div class="project">
-            <video src="/_res/doom-v1.mp4" controls></video>
+            <video src="/res/doom-v1.mp4" controls></video>
             <h4>Doom Brasil inventory</h4>
             <p>... <br>
                 ... <br>
@@ -305,7 +305,7 @@
             </p>
         </div>
         <div class="project">
-            <video src="/_res/doom-v2.mp4" controls></video>
+            <video src="/res/doom-v2.mp4" controls></video>
             <h4>Doom Brasil inventory V2</h4>
             <p>I was not satisfied the UI of the first version of this Projects
                 that i built, so i decided to create a new UI for it <br>
@@ -318,7 +318,7 @@
         </div>
 
         <div class="project">
-            <video src="/_res/spider-prompt.mp4" controls></video>
+            <video src="/res/spider-prompt.mp4" controls></video>
             <h4>Spider Prompt</h4>
             <p>I created my own android command prompt for funny. It's already working
                 but not finished yet. My goal is adding 30 commands on it <br>
@@ -331,7 +331,7 @@
         </div>
 
         <div class="project">
-            <video src="/_res/msg-app.mp4" controls></video>
+            <video src="/res/msg-app.mp4" controls></video>
             <h4>Impaktu msg app(2024)</h4>
             <p>An app personalized sms sending for a company using
                 a sms API.
