--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./_css/index-style.css">
-    <link rel="icon" href="./_imgs/ic_clemente_blueart.png">
+    <link rel="stylesheet" href="/css/index-style.css">
+    <link rel="icon" href="/imgs/ic_clemente_blueart.png">
     <title>My Projects</title>
 </head>
 
@@ -21,7 +21,7 @@
     </div>
     <div class="projec_field">
         <div class="project">
-            <video src="_res/mafa-desktop.mp4" controls></video>
+            <video src="/res/mafa-desktop.mp4" controls></video>
             <h4>Mafa Management System</h4>
             <p>I created a restaurant system for "wndows, linux and MacOS"
                 that can help you to manage your restaurant and the Android
@@ -36,7 +36,7 @@
         </div>
 
         <div class="project">
-            <img src="_imgs/port.jpg">
+            <img src="/imgs/port.jpg">
             <h4>This Portfolio</h4>
             <p>
             <pre>
@@ -53,7 +53,7 @@
             </p>
         </div>
 
-        <div class="project"><img src="_imgs/landing-page.jpg">
+        <div class="project"><img src="/imgs/landing-page.jpg">
             <h4>Landing Page</h4>
             <p>
                 . <br>
@@ -69,7 +69,7 @@
         </div>
 
         <div class="project">
-            <img src="_imgs/ipage.jpg">
+            <img src="/imgs/ipage.jpg">
             <h4>IPage Webview App</h4>
             <p>
             <pre>
@@ -86,8 +86,8 @@
         </div>
 
         <div class="project">
-            <img src="_imgs/wbv_sel.jpg">
-            <h4>SLE Webview App</h4>
+            <img src="/imgs/wbv_sel.jpg">
+            <h4>Soberano Equipamentos Webview App</h4>
             <p>
             <pre>
                 .
@@ -103,7 +103,7 @@
         </div>
 
         <div class="project">
-            <img src="_imgs/pdvmobi.jpg">
+            <img src="/imgs/pdvmobi.jpg">
             <h4>PDVMobi site clone</h4>
             <p>
             <pre>
@@ -120,7 +120,7 @@
             </p>
         </div>
 
-        <div class="project"><img src="_imgs/app_01.jpg">
+        <div class="project"><img src="/imgs/app_01.jpg">
             <h4>Mafa Management System a1</h4>
             <p>This android application is part of mafa management system
                 it's used as menu and inventory and it can be blocked by
@@ -133,7 +133,7 @@
         </div>
 
 
-        <div class="project"><img src="_imgs/app_02.jpg">
+        <div class="project"><img src="/imgs/app_02.jpg">
             <h4>Kwanzito</h4>
             <p>Kwanzito is an android app that i created thinking
                 in the young people with dream of being a entrepreneur but don't
@@ -147,7 +147,7 @@
             </p>
         </div>
         <div class="project">
-            <img src="_imgs/mafa-website.PNG">
+            <img src="/imgs/mafa-website.PNG">
             <h4>Mafa Website</h4>
             <p>Mafa Website, a place where you can be updated of everything
                 about Mafa restaurant: food, prices, activities and schedule
@@ -159,7 +159,7 @@
             </p>
         </div>
         <div class="project">
-            <video src="_res/blue.mp4" controls></video>
+            <video src="/res/blue.mp4" controls></video>
             <h4>Blue Art HR</h4>
             <p>Blue Art HR is an desktop applications created to know
                 how many Clients, devices and money the technical assistancy got
@@ -171,7 +171,7 @@
             </p>
         </div>
         <div class="project">
-            <video src="_res/sapula.mp4" controls></video>
+            <video src="/res/sapula.mp4" controls></video>
             <h4>Sapula private school</h4>
             <p>It's a website a informative website about Sapula privated school
                 it's where did high school i had my first contact with programming.
@@ -185,7 +185,7 @@
             </p>
         </div>
         <div class="project">
-            <video src="_res/doom-v1.mp4" controls></video>
+            <video src="/res/doom-v1.mp4" controls></video>
             <h4>Doom Brasil inventory</h4>
             <p>... <br>
                 ... <br>
@@ -200,7 +200,7 @@
             </p>
         </div>
         <div class="project">
-            <video src="_res/doom-v2.mp4" controls></video>
+            <video src="/res/doom-v2.mp4" controls></video>
             <h4>Doom Brasil inventory V2</h4>
             <p>I was not satisfied the UI of the first version of this Projects
                 that i built, so i decided to create a new UI for it <br>
@@ -213,7 +213,7 @@
         </div>
 
         <div class="project">
-            <video src="_res/spider-prompt.mp4" controls></video>
+            <video src="/res/spider-prompt.mp4" controls></video>
             <h4>Spider Prompt</h4>
             <p>I created my own android command prompt for funny. It's already working
                 but not finished yet. My goal is adding 30 commands on it <br>
@@ -226,7 +226,7 @@
         </div>
 
         <div class="project">
-            <video src="_res/msg-app.mp4" controls></video>
+            <video src="/res/msg-app.mp4" controls></video>
             <h4>Impaktu msg app(2024)</h4>
             <p>An app personalized sms sending for a company using
                 a sms API.
@@ -240,7 +240,7 @@
         </div>
 
         <div class="project">
-            <img src="_imgs/t-farm.PNG">
+            <img src="/imgs/t-farm.PNG">
             <h4>T-Farm</h4>
             <p>A pharmacy management system
             <pre>
@@ -257,7 +257,7 @@
         </div>
 
         <div class="project">
-            <img src="_imgs/canteen.jpg">
+            <img src="/imgs/canteen.jpg">
             <h4>Mobile Store Management System</h4>
             <p>UI only
             <pre>
@@ -274,7 +274,7 @@
         </div>
 
         <div class="project">
-            <img src="_imgs/clinic.jpg">
+            <img src="/imgs/clinic.jpg">
             <h4>Clinica Bryane</h4>
             <p>Clinic Booking App
             <pre>
@@ -295,9 +295,9 @@
         <div class="footer-column">
             <h3>Fallow more</h3>
             <p>
-                <img src="_imgs/ic_facebook.png">
-                <img src="_imgs/ic_instagram.png">
-                <img src="_imgs/ic_twitter.png">
+                <img src="/imgs/ic_facebook.png">
+                <img src="/imgs/ic_instagram.png">
+                <img src="/imgs/ic_twitter.png">
             </p>
 
         </div>
