final adjustments for today

--- a/about-me.html
+++ b/about-me.html
@@ -84,7 +84,7 @@
             <p>
                 <b>Web development</b><br>
                 Html, css, JS, Bootstrap, Jquery, php(PDO), React + Vite. <br>
-                (Currently learning Laravel and WordPress) <br>
+                (Currently learning Kotlin and springboot) <br>
             </p>
             <p>
                 <b>Desktop app development</b><br>
