--- a/ach.html
+++ b/ach.html
@@ -28,7 +28,7 @@
         <p style="margin-top: -100px; margin-bottom: 100px; text-align: center;
         font-weight: 600;">
             Visit my youtube channel <br>
-            <button id="youtube-button">
+            <button id="youtube-button" onclick="window.location.href='https://youtu.be/6_6GNGgx0lk?si=-g1I5wcVWFfhp4J7'">
                 Click here
             </button>
         </p>
