adding new project detail

--- a/index.html
+++ b/index.html
@@ -225,6 +225,22 @@
             </p>
         </div>
 
+        <div class="project">
+            <img src="/imgs/bluestore.jpg">
+            <h4>BlueStore SaaS (Front-end)</h4>
+            <p>
+            <pre>
+                Just a personal project to develop my skills <br>
+                (Still in development)
+            </pre>
+            (2025-Portuguese)
+            </p><br>
+            <p>
+                <b>Technologies:</b> <br>
+                React + vite, css
+            </p>
+        </div>
+
         <div class="project"><img src="/imgs/app_01.jpg">
             <h4>Mafa Management System a1</h4>
             <p>This android application is part of mafa management system
