adding some informations

--- a/about-me.html
+++ b/about-me.html
@@ -23,7 +23,7 @@
     <h1 style="margin: 20px;">About me</h1>
     <div class="perfil">
         <div class="perfil-column">
-            <img src="/imgs/img_content_to_learn.png" class="perfil-pic">
+            <img src="/imgs/executive_photo.png" class="perfil-pic">
         </div>
         <div class="perfil-column">
             <h2>Clemente T. Joaquim</h2>
@@ -40,27 +40,45 @@
                 driven by his enthusiasm for building software that can change lives.
                 Clemente embodies the spiritof a young developer: curious, ambitious,
                 and ready to take on the challenges of the digital age.
-
             </p>
         </div>
         <div class="perfil-column">
             <h2>Work Experience:</h2>
             <p>
-                <b>Web, android developer and Designer</b><br>
-                 Team Genesis (2022-2023). <br>
-            </p>
-            <p>
-                <b>Fullstack developer</b><br>
-                GitSource (2023-2024). <br>
-            </p>
-            <p>
-                <b>Web developer/Android developer/ desktop app developer</b><br>
-                Freelance (2023-Current time). <br>
-            </p>
-            <p>
-                <b>Not related to computer science</b><br>
-                I was a translator, mathematics teacher, english and Portuguese teacher.
-            </p>
+                <div class="work-expireince">
+                    <section class="company-logo">
+                        <img src="imgs/gitsource.jpg" class="company-icon">
+                    </section>
+                    <aside class="company-name">
+                        <h3>
+                            Git Source
+                        </h3>
+                        <p style="color: #313131;
+                        padding: 0px; font-weight: 400;">
+                            FullStack developer <br>
+                            (2023-2024).
+                        </p>
+                    </aside>
+                </div>
+                </p>
+
+                <p>
+                    <div class="work-expireince">
+                        <section class="company-logo">
+                            <img src="imgs/freelance.png" class="company-icon">
+                        </section>
+                        <aside class="company-name">
+                            <h3>
+                                Freelance
+                            </h3>
+                            <p style="color: #313131;
+                            padding: 0px; font-weight: 400;">
+                                Web developer/Android developer/ desktop app developer<br>
+                                (2023-Current time).
+                            </p>
+                        </aside>
+                    </div>
+                    </p>
         </div>
     </div>
 
@@ -69,42 +87,65 @@
             <h2>More descriptions</h2>
             <h3>Languages spoken:</h3>
             <ol start="*">
-                <li>Portuguese</li>
-                <li>English</li>
-                <li>Spanish</li>
+                <li>Portuguese (Nat. language)</li>
+                <li>English 89%</li>
+                <li>Spanish 65%</li>
             </ol>
         </div>
         <div class="perfil-column">
             <h2>Programming languages and technologies:</h2>
-            <p>
-                <b>Android development</b><br>
-                Java, xml, mysql, sqlite and php for APIs. <br>
-                (Currently learning Kotlin) <br>
-            </p>
-            <p>
-                <b>Web development</b><br>
-                Html, css, JS, Bootstrap, Jquery, php(PDO), React + Vite. <br>
-                (Currently learning Kotlin and springboot) <br>
-            </p>
-            <p>
-                <b>Desktop app development</b><br>
-                Java swing and mysql. <br>
-            </p>
-
+            <div class="skills">
+                <img src="imgs/html.png"><img src="imgs/css.png"><img src="imgs/js.png"><img src="imgs/bootstrap.png">
+                <img src="imgs/jquery.png"><img src="imgs/react.png"><img src="imgs/mysql.png"><img src="imgs/php.png">
+                <img src="imgs/sqlite.png"><img src="imgs/java.png"><img src="imgs/android.png"><br>
+                <p>
+                    DSA and a little more
+                </p>
+                <img src="imgs/python.png"><img src="imgs/ts.png"><img src="imgs/c.png"><img src="imgs/kotlin-logo.png" class="kt">
+            </div>
         </div>
         <div class="perfil-column">
-            <h2>Other skills:</h2>
+            <h2>Education</h2>
+            
             <p>
-                <b>Computer reparing</b><br>
-            </p>
-            <p>
-                <b>Micro electronic</b><br>
-            </p>
-            <p>
+                <div class="work-expireince">
+                    <section class="company-logo">
+                        <img src="imgs/impal.jpeg" class="company-icon">
+                    </section>
+                    <aside class="company-name">
+                        <h3>
+                            Alda Lara Industrial Polytechnic Institute
+                        </h3>
+                        <p style="color: #313131;
+                        padding: 0px; font-weight: 400;">
+                            Computer science <br>
+                            (2018-2022).
+                        </p>
+                    </aside>
+                </div>
+                </p>
+
+                <p>
+                    <div class="work-expireince">
+                        <section class="company-logo">
+                            <img src="imgs/question.jpg" class="company-icon">
+                        </section>
+                        <aside class="company-name">
+                            <h3>
+                                University of ...
+                            </h3>
+                            <p style="color: #313131;
+                            padding: 0px; font-weight: 400;">
+                                Computer enginering <br>
+                                (???? - ????).
+                            </p>
+                        </aside>
+                    </div>
+                    </p>
                 <b>...</b><br>
 
                 <img src="/imgs/angola-fleg.jpg" width="200" height="100">
-    
+
             </p>
         </div>
     </div>
