--- a/portfolio.html
+++ b/portfolio.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="/assets/img/favicon.png" rel="icon">
+  <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -20,14 +20,14 @@
     rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="/assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: FolioOne
@@ -92,9 +92,9 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/farmax.JPG" alt="Portfolio Item" class="img-fluid">
+                  <img src="/assets/img/portfolio/farmax.JPG" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/farmax.JPG" class="glightbox portfolio-lightbox"><i
+                    <a href="/assets/img/portfolio/farmax.JPG" class="glightbox portfolio-lightbox"><i
                         class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
@@ -113,9 +113,9 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-finance">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/farmax_api.JPG" alt="Portfolio Item" class="img-fluid">
+                  <img src="/assets/img/portfolio/farmax_api.JPG" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/farmax_api.JPG" class="glightbox portfolio-lightbox"><i
+                    <a href="/assets/img/portfolio/farmax_api.JPG" class="glightbox portfolio-lightbox"><i
                         class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
@@ -134,9 +134,9 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-operations">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/farmax_wev.JPG" alt="Portfolio Item" class="img-fluid">
+                  <img src="/assets/img/portfolio/farmax_wev.JPG" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/farmax_wev.JPG" class="glightbox portfolio-lightbox"><i
+                    <a href="/assets/img/portfolio/farmax_wev.JPG" class="glightbox portfolio-lightbox"><i
                         class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
@@ -155,9 +155,9 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-technology">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/b_art_os_pro.JPG" alt="Portfolio Item" class="img-fluid">
+                  <img src="/assets/img/portfolio/b_art_os_pro.JPG" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/b_art_os_pro.JPG" class="glightbox portfolio-lightbox"><i
+                    <a href="/assets/img/portfolio/b_art_os_pro.JPG" class="glightbox portfolio-lightbox"><i
                         class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
@@ -176,9 +176,9 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/b_art_os_controller.JPG" alt="Portfolio Item" class="img-fluid">
+                  <img src="/assets/img/portfolio/b_art_os_controller.JPG" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/b_art_os_controller.JPG" class="glightbox portfolio-lightbox"><i
+                    <a href="/assets/img/portfolio/b_art_os_controller.JPG" class="glightbox portfolio-lightbox"><i
                         class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
@@ -197,9 +197,9 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-finance">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/mafa-website.PNG" alt="Portfolio Item" class="img-fluid">
+                  <img src="/assets/img/portfolio/mafa-website.PNG" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/mafa-website.PNG" class="glightbox portfolio-lightbox"><i
+                    <a href="/assets/img/portfolio/mafa-website.PNG" class="glightbox portfolio-lightbox"><i
                         class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
@@ -220,9 +220,9 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-technology">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/ipage.jpg" alt="Portfolio Item" class="img-fluid">
+                  <img src="/assets/img/portfolio/ipage.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/ipage.jpg" class="glightbox portfolio-lightbox"><i
+                    <a href="/assets/img/portfolio/ipage.jpg" class="glightbox portfolio-lightbox"><i
                         class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
@@ -241,9 +241,9 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/wbv_sel.jpg" alt="Portfolio Item" class="img-fluid">
+                  <img src="/assets/img/portfolio/wbv_sel.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/wbv_sel.jpg" class="glightbox portfolio-lightbox"><i
+                    <a href="/assets/img/portfolio/wbv_sel.jpg" class="glightbox portfolio-lightbox"><i
                         class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
@@ -262,9 +262,9 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-finance">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/pdvmobi.jpg" alt="Portfolio Item" class="img-fluid">
+                  <img src="/assets/img/portfolio/pdvmobi.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/pdvmobi.jpg" class="glightbox portfolio-lightbox"><i
+                    <a href="/assets/img/portfolio/pdvmobi.jpg" class="glightbox portfolio-lightbox"><i
                         class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
@@ -307,7 +307,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">Clemente</a>
+        Designed by <a href="https://clementet3rr1us.github.io/">Clemente</a>
       </div>
     </div>
 
@@ -321,19 +321,19 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/typed.js/typed.umd.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/assets/vendor/php-email-form/validate.js"></script>
+  <script src="/assets/vendor/aos/aos.js"></script>
+  <script src="/assets/vendor/typed.js/typed.umd.js"></script>
+  <script src="/assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="/assets/js/main.js"></script>
 
 </body>
 
